# ai-mastery-lab

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/config/: database.py  settings.py
app/exceptions/: handlers.py
app/models/: __init__.py  account.py  transaction.py
app/repositories/: account_repository.py  transaction_repository.py
app/routers/: account_router.py  transaction_router.py
app/schemas/: account.py  transaction.py
app/services/: account_service.py  transaction_service.py
docs/: sessao-1-bootstrap.md  sessao-2-account-crud.md  sessao-3-transactions.md  sessao-4-observability.md  sessao-5-rag-ingestion.md  sessao-6-rag-query.md  sessao-7-agent-tools.md  sessao-8-langgraph.md
tests/: conftest.py
tests/integration/: test_account_router.py  test_transaction_router.py
tests/unit/: test_account_service.py  test_transaction_service.py
