[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mastery-lab"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # Core - Framework web + servidor
    "fastapi[standard]",
    "uvicorn[standard]",

    # Core - Persistencia
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",

    # Core - Validacao e configuracao
    "pydantic>=2.0",
    "pydantic-settings",

    # Core - HTTP client
    "httpx",

    # Observabilidade
    "structlog",
    "prometheus-fastapi-instrumentator",

    # IA (usadas a partir da Fase 2)
    "langchain-core",
    "langchain-google-genai",
    "langgraph",
    "langchain-text-splitters",
    "pgvector",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "testcontainers[postgres]",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
